--- a/Profile/Pages/GitHub.razor
+++ b/Profile/Pages/GitHub.razor
@@ -1,6 +1,7 @@
 @page "/GitHub"
 @inject NavigationManager NavigationManager
 
+<HeadTitle Title="Redirect"></HeadTitle>
 <Redirect PageName="GitHub"></Redirect>
 
 @code {
