--- a/Profile/Pages/Git.razor
+++ b/Profile/Pages/Git.razor
@@ -1,6 +1,7 @@
 @page "/Git"
 @inject NavigationManager NavigationManager
 
+<HeadTitle Title="Redirect"></HeadTitle>
 <Redirect PageName="GitHub"></Redirect>
 
 @code {
