--- a/Profile/Pages/Medium.razor
+++ b/Profile/Pages/Medium.razor
@@ -1,6 +1,7 @@
 @page "/Medium"
 @inject NavigationManager NavigationManager
 
+<HeadTitle Title="Redirect"></HeadTitle>
 <Redirect PageName="Medium blog"></Redirect>
 
 @code {
