--- a/Profile/Pages/Links.razor
+++ b/Profile/Pages/Links.razor
@@ -6,7 +6,7 @@
 <MudContainer MaxWidth="MaxWidth.Small">
     <MudGrid Style="text-align: center">
         <MudItem xs="12">
-            <MudImage Src="images/ari.jpeg" Alt="Ari avatar" Elevation="1" Class="rounded-circle avatar" Width="150"/>
+            <MudImage Src="images/ari.png" Alt="Ari avatar" Elevation="1" Class="rounded-circle avatar" Width="150"/>
         </MudItem>
         <MudItem xs="12">
             <MudText Typo="Typo.h4" Color="Color.Primary">Ariadne Rangel</MudText>
